--- a/whats_fresh/whats_fresh_api/templates/products_list.html
+++ b/whats_fresh/whats_fresh_api/templates/products_list.html
@@ -1,8 +1,11 @@
 {% extends "list.html" %}
 {% block extra_information %}
-<div class="product_preparations"><ul>
-{% for preparation in item.preparations %}
-<li class="inline_list">{{ preparation }}</li>
-{% endfor %}
-</ul></div>
+<div class='product_list'>
+    <p>Preparations:</p>
+    <ul>
+        {% for preparation in item.preparations %}
+        <li>{{ preparation }}</li>
+        {% endfor %}
+    </ul>
+</div>
 {% endblock %}
