--- a/whats_fresh/whats_fresh_api/templates/product.html
+++ b/whats_fresh/whats_fresh_api/templates/product.html
@@ -28,44 +28,49 @@
         {% for error in errors %}
         <p class='warning'>{{ error|escape }}</p>
         {% endfor %}
-    </ul>
-</div>
-{% endif %}
-{% csrf_token %}
-<h3>Basic Info</h3>
-<p class="field_text">Name*:</p>
-{{ product_form.name }}
-<p class="field_text" >Variety:</p>
-{{ product_form.variety }}
-<p class="field_text" >Alternate Name:</p>
-{{ product_form.alt_name }}
-<p class="field_text" >Origin:</p>
-{{ product_form.origin }}
-<p class="field_text" >Description*:</p>
-{{ product_form.description }}
-<p class="field_text" >Season*:</p>
-{{ product_form.season }}
-<p class="field_text" >Available?</p>
-{{ product_form.available }}
-<p class="field_text" >Market Price*:</p>
-{{ product_form.market_price }}
-<p class="field_text" >Link:</p>
-{{ product_form.link }}
-<p class="field_text" >Image:</p>
-{{ product_form.image_id }}
-<p class="field_text">Story:</p>
-{{ product_form.story_id }}
-<input class="preparations" name="preparations" type="hidden" />
-<div class="container">
-    <h3>Preparation</h3>
-    <button type="button" onclick="appendPreparation()">Add Preparation</button>
-    {% if existing_preparations %}
-    {% for prep in existing_preparations %}
-    <div class="preparation">
-        <a href="#" onclick="deletePreparation(this);return false;"><img class="delete" src="{% static 'delete.png' %}" />Delete</a>
-        <select disabled id="existing{{ prep.id }}">
-            <option value="{{ prep.id }}">{{ prep.name }}</option>
-        </select>
+    </div>
+    {% endif %}
+    {% csrf_token %}
+    <h3>Basic Info</h3>
+    <p class="field_text">Name*:</p>
+    {{ product_form.name }}
+    <p class="field_text" >Variety:</p>
+    {{ product_form.variety }}
+    <p class="field_text" >Alternate Name:</p>
+    {{ product_form.alt_name }}
+    <p class="field_text" >Origin:</p>
+    {{ product_form.origin }}
+    <p class="field_text" >Description*:</p>
+    {{ product_form.description }}
+    <p class="field_text" >Season*:</p>
+    {{ product_form.season }}
+    <p class="field_text" >Available?</p>
+    {{ product_form.available }}
+    <p class="field_text" >Market Price*:</p>
+    {{ product_form.market_price }}
+    <p class="field_text" >Link:</p>
+    {{ product_form.link }}
+    <p class="field_text" >Image:</p>
+    {{ product_form.image_id }}
+    <p class="field_text">Story:</p>
+    {{ product_form.story_id }}
+    <input class="preparations" name="preparations" type="hidden" />
+    <div class="container">
+        <h3>Preparation</h3>
+        <button type="button" onclick="appendPreparation()">Add Preparation</button>
+        {% if existing_preparations %}
+        {% for prep in existing_preparations %}
+        <div class="preparation">
+            <a href="#" onclick="deletePreparation(this);return false;"><img class="delete" src="{% static 'delete.png' %}" />Delete</a>
+            <select disabled id="existing{{ prep.id }}">
+                <option value="{{ prep.id }}">{{ prep.name }}</option>
+            </select>
+        </div>
+        {% endfor %}
+        {% else %}
+        <span class="no_prep">No Preparations Yet!</span>
+        {% endif %}
+        >>>>>>> Centering preparation form, deleting old.css, and enlarging description.  Also adding sass file
     </div>
     {% endfor %}
     {% else %}
