Add Delete functionality to entry interface

--- a/whats_fresh/whats_fresh_api/static/css/style.css
+++ b/whats_fresh/whats_fresh_api/static/css/style.css
@@ -104,8 +104,10 @@ a {
     color: #517285; }
 
 .message {
+  font-size: 24pt;
   width: 100%;
-  text-align: center; }
+  text-align: center;
+  color: #FFCA5D; }
 
 .form, .entry_box {
   display: inline-block;
