--- a/whats_fresh/whats_fresh_api/templates/list.html
+++ b/whats_fresh/whats_fresh_api/templates/list.html
@@ -17,7 +17,7 @@
 <div class='new'>
     <a href='{{ new_url }}'><p>{{ new_text }}</p></a>
 </div>
-<div class='message'>{{ message }}</div>
+<div class='message'><h4 class='light accent'>{{ message }}</h4></div>
 {% for item in item_list %}
 <a href='{{ item.link }}'>
     <div class='{{ item_classification }} list'>
