--- a/whats_fresh/whats_fresh_api/templates/product.html
+++ b/whats_fresh/whats_fresh_api/templates/product.html
@@ -30,6 +30,7 @@
         {% endfor %}
     </div>
     {% endif %}
+    <h4 id='error_tag' class='light warning'></h4>
     {% csrf_token %}
     <h3>Basic Info</h3>
     <p class="field_text">Name*:</p>
@@ -73,6 +74,7 @@
     </div>
 
     <input class='preparation' name="preparation_ids" type="hidden" />
+    <button type"input" onclick="deleteProduct();return false;" />Delete</button>
     <button type="submit" onclick="setPreparationField();"/>Save</button>
 </form>
 <!-- The template div used by appendPreparation() -->
@@ -101,6 +103,23 @@
         if ($( ".preparation:visible" ).length === 0) {
             $( ".no_products" ).show();
         };
+    }
+
+    function deleteProduct()
+    {
+        $.ajax({
+          type: 'DELETE',
+          headers: { 'X-CSRFToken': '{{ csrf_token }}' },
+          statusCode: {
+            404: function() {
+              $("#error_tag").text('Unable to delete product!');
+              $("html, body").animate({ scrollTop: 0 }, "slow");
+            },
+            200: function() {
+              window.location.replace('{% with parent_url|last as last %}{{ last.url }}{% endwith %}/?success=true');
+            }
+          }
+        });
     }
 
     function appendPreparation()
