--- a/whats_fresh/whats_fresh_api/templates/base.html
+++ b/whats_fresh/whats_fresh_api/templates/base.html
@@ -15,7 +15,9 @@
             {% block header %}
             {% endblock header%}
             <h2><a href='/entry'>What's Fresh</a></h2>
+            {% if user.is_authenticated %}
             <a class='logout' href='/login'>Logout</a>
+            {% endif %}
         </div>
         <div class="content">
             <div class="title">
