Change logout button in UI to logout, add sucecss message

--- a/whats_fresh/whats_fresh_api/templates/base.html
+++ b/whats_fresh/whats_fresh_api/templates/base.html
@@ -16,7 +16,7 @@
             {% endblock header%}
             <h2><a href='/entry'>What's Fresh</a></h2>
             {% if user.is_authenticated %}
-            <a class='logout' href='/login'>Logout</a>
+            <a class='logout' href='/logout'>Logout</a>
             {% endif %}
         </div>
         <div class="content">
