Change entry fields to image and story instead of image_id and story_id

--- a/whats_fresh/whats_fresh_api/templates/product.html
+++ b/whats_fresh/whats_fresh_api/templates/product.html
@@ -52,9 +52,9 @@
     <p class="field_text" >Link:</p>
     {{ product_form.link }}
     <p class="field_text" >Image:</p>
-    {{ product_form.image_id }}
+    {{ product_form.image }}
     <p class="field_text">Story:</p>
-    {{ product_form.story_id }}
+    {{ product_form.story }}
     <input class="preparations" name="preparations" type="hidden" />
     <div class="container">
         <h3>Preparation</h3>
