--- a/whats_fresh/whats_fresh_api/templates/vendor.html
+++ b/whats_fresh/whats_fresh_api/templates/vendor.html
@@ -41,7 +41,7 @@
     <p class="field_text">Description*:</p>
     {{ vendor_form.description }}
     <p class="field_text">Story*:</p>
-    {{ vendor_form.story_id }}
+    {{ vendor_form.story }}
     <p class=" field_text">In Port:</p>
     {{ vendor_form.status }}
     <h3>Location</h3>
